---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 3
  fix:
    content:
      - "'''"
      - this is not a docstring
      - "'''"
    location:
      row: 5
      column: 0
    end_location:
      row: 7
      column: 3
  parent: ~
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 16
    column: 4
  end_location:
    row: 18
    column: 7
  fix:
    content:
      - "'''"
      - "    this is not a docstring"
      - "    '''"
    location:
      row: 16
      column: 4
    end_location:
      row: 18
      column: 7
  parent: ~
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 21
    column: 20
  end_location:
    row: 22
    column: 37
  fix:
    content:
      - "'''"
      - "        definitely not a docstring'''"
    location:
      row: 21
      column: 20
    end_location:
      row: 22
      column: 37
  parent: ~
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 30
    column: 8
  end_location:
    row: 32
    column: 11
  fix:
    content:
      - "'''"
      - "        this is not a docstring"
      - "        '''"
    location:
      row: 30
      column: 8
    end_location:
      row: 32
      column: 11
  parent: ~
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 35
    column: 12
  end_location:
    row: 37
    column: 15
  fix:
    content:
      - "'''"
      - "            Looks like a docstring, but in reality it isn't - only modules, classes and functions"
      - "            '''"
    location:
      row: 35
      column: 12
    end_location:
      row: 37
      column: 15
  parent: ~

